svgs no longer off screen

--- a/src/web/viz.css
+++ b/src/web/viz.css
@@ -7,11 +7,12 @@ text {
 }
 
 div.fullscreen {
-    position:fixed;
+    /*position:fixed;
     top:0;
     left:0;
     width:100%;
-    height:100%;
+    height:100%;*/
+		
 }
 
 div.left {
